<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.wso2.carbon.extension</groupId>
    <artifactId>custom-recaptcha-filter</artifactId>
    <version>1.0.0</version>
    <packaging>bundle</packaging>
    <name>App-Specific reCAPTCHA Filter for WSO2 IS</name>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <!--
            javax.servlet-api is provided at runtime by WSO2 IS (Tomcat).
            Do NOT package it in the jar — mark as "provided".
        -->
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>3.1.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
            <version>1.2</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
    <build>
        <finalName>org.wso2.carbon.extension.custom.captcha.filter</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.felix</groupId>
                <artifactId>maven-bundle-plugin</artifactId>
                <version>5.1.8</version>
                <extensions>true</extensions>
                <configuration>
                    <instructions>
                        <Bundle-SymbolicName>
                            org.wso2.carbon.extension.custom.captcha.filter
                        </Bundle-SymbolicName>
                        <Bundle-Name>
                            Custom reCAPTCHA Filter
                        </Bundle-Name>
                        <Bundle-Version>1.0.0</Bundle-Version>
                        <Private-Package>
                            org.wso2.carbon.extension.captcha
                        </Private-Package>
                        <Import-Package>
                            javax.servlet;resolution:=optional,
                            javax.servlet.http;resolution:=optional,
                            org.apache.commons.logging;version="[1.1,2)",
                            *
                        </Import-Package>
                        <DynamicImport-Package>*</DynamicImport-Package>
                    </instructions>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
